[gd_scene load_steps=51 format=3 uid="uid://c5x2d73he3b46"]

[ext_resource type="Texture2D" uid="uid://bwdiuw5ckthr2" path="res://assets/buttons/ButtonHover.png" id="1_br572"]
[ext_resource type="Theme" uid="uid://dffkvuvqv7hhf" path="res://resources/MainTheme.tres" id="1_lfv08"]
[ext_resource type="Script" path="res://resources/instances/button/ui_button_container/UIButtonContainer.gd" id="2_4sppj"]
[ext_resource type="Texture2D" uid="uid://b223v0o1lym56" path="res://assets/buttons/ButtonPressed.png" id="2_uwa4q"]
[ext_resource type="Texture2D" uid="uid://p0a4t17dx158" path="res://assets/buttons/ButtonUnhover.png" id="3_n82se"]
[ext_resource type="Script" path="res://resources/instances/button/menu_button/MenuButtons.gd" id="4_1ws2a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yp5m6"]
atlas = ExtResource("1_br572")
region = Rect2(0, 0, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_od765"]
atlas = ExtResource("1_br572")
region = Rect2(350, 0, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu2wc"]
atlas = ExtResource("1_br572")
region = Rect2(700, 0, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj5md"]
atlas = ExtResource("1_br572")
region = Rect2(1050, 0, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1repa"]
atlas = ExtResource("1_br572")
region = Rect2(0, 80, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vy0b"]
atlas = ExtResource("1_br572")
region = Rect2(350, 80, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a60s6"]
atlas = ExtResource("1_br572")
region = Rect2(700, 80, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cvw1"]
atlas = ExtResource("1_br572")
region = Rect2(1050, 80, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6la7"]
atlas = ExtResource("1_br572")
region = Rect2(0, 160, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_utkk8"]
atlas = ExtResource("1_br572")
region = Rect2(350, 160, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqh74"]
atlas = ExtResource("1_br572")
region = Rect2(700, 160, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei73s"]
atlas = ExtResource("1_br572")
region = Rect2(1050, 160, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_100ee"]
atlas = ExtResource("2_uwa4q")
region = Rect2(0, 0, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnbv2"]
atlas = ExtResource("2_uwa4q")
region = Rect2(350, 0, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqp51"]
atlas = ExtResource("2_uwa4q")
region = Rect2(700, 0, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymnyq"]
atlas = ExtResource("2_uwa4q")
region = Rect2(1050, 0, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wiwh"]
atlas = ExtResource("2_uwa4q")
region = Rect2(0, 120, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_kok34"]
atlas = ExtResource("2_uwa4q")
region = Rect2(350, 120, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_mew7n"]
atlas = ExtResource("2_uwa4q")
region = Rect2(700, 120, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6so0"]
atlas = ExtResource("2_uwa4q")
region = Rect2(1050, 120, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2ub8"]
atlas = ExtResource("2_uwa4q")
region = Rect2(0, 240, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_7525p"]
atlas = ExtResource("2_uwa4q")
region = Rect2(350, 240, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_c01ws"]
atlas = ExtResource("2_uwa4q")
region = Rect2(700, 240, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_fesma"]
atlas = ExtResource("2_uwa4q")
region = Rect2(1050, 240, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp5gb"]
atlas = ExtResource("2_uwa4q")
region = Rect2(0, 360, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_j467t"]
atlas = ExtResource("2_uwa4q")
region = Rect2(350, 360, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr8rl"]
atlas = ExtResource("2_uwa4q")
region = Rect2(700, 360, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrb3i"]
atlas = ExtResource("2_uwa4q")
region = Rect2(1050, 360, 350, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_amffj"]
atlas = ExtResource("3_n82se")
region = Rect2(0, 0, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_12uar"]
atlas = ExtResource("3_n82se")
region = Rect2(350, 0, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1tlw"]
atlas = ExtResource("3_n82se")
region = Rect2(700, 0, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymvu4"]
atlas = ExtResource("3_n82se")
region = Rect2(1050, 0, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7jqh"]
atlas = ExtResource("3_n82se")
region = Rect2(0, 80, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfeb5"]
atlas = ExtResource("3_n82se")
region = Rect2(350, 80, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_542gw"]
atlas = ExtResource("3_n82se")
region = Rect2(700, 80, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd514"]
atlas = ExtResource("3_n82se")
region = Rect2(1050, 80, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ingm2"]
atlas = ExtResource("3_n82se")
region = Rect2(0, 160, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4pm2"]
atlas = ExtResource("3_n82se")
region = Rect2(350, 160, 350, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8gvm"]
atlas = ExtResource("3_n82se")
region = Rect2(700, 160, 350, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_68q1m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp5m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od765")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu2wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj5md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1repa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vy0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a60s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cvw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6la7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utkk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqh74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei73s")
}],
"loop": false,
"name": &"button_hover",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_100ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnbv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqp51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymnyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wiwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kok34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mew7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6so0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2ub8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7525p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c01ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fesma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp5gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j467t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr8rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrb3i")
}],
"loop": false,
"name": &"button_pressed",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amffj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12uar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1tlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymvu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7jqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfeb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_542gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd514")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ingm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4pm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8gvm")
}],
"loop": false,
"name": &"button_unhover",
"speed": 24.0
}, {
"frames": [],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="Animation" id="Animation_q23wn"]
resource_name = "ButtonHover"

[sub_resource type="Animation" id="Animation_1uto5"]
resource_name = "ButtonPressed"

[sub_resource type="Animation" id="Animation_isgyq"]
resource_name = "ButtonUnhover"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8rqpc"]
_data = {
"ButtonHover": SubResource("Animation_q23wn"),
"ButtonPressed": SubResource("Animation_1uto5"),
"ButtonUnhover": SubResource("Animation_isgyq")
}

[node name="ButtonContainer" type="Control"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_lfv08")
script = ExtResource("2_4sppj")

[node name="ButtonSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(176, 48)
scale = Vector2(1.00571, 1)
sprite_frames = SubResource("SpriteFrames_68q1m")
animation = &"button_unhover"
autoplay = "button_unhover"

[node name="Button" type="Button" parent="." node_paths=PackedStringArray("targetSprite")]
layout_mode = 2
offset_top = 8.0
offset_right = 304.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 23
script = ExtResource("4_1ws2a")
targetSprite = NodePath("../ButtonSprite")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8rqpc")
}

[connection signal="mouse_entered" from="Button" to="Button" method="OnMouseEntered"]
[connection signal="mouse_exited" from="Button" to="Button" method="OnMouseExited"]
[connection signal="pressed" from="Button" to="." method="OnButtonPressed"]
[connection signal="pressed" from="Button" to="Button" method="OnPressed"]
